--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "orchestra/tenanti",
+    "name": "cortega99/tenanti",
     "description": "Tenant based Database Schema Manager for Laravel",
     "keywords": ["laravel", "orchestral", "orchestra-platform", "multi-tenant", "schema", "migration"],
     "license": "MIT",
@@ -25,9 +25,9 @@
     },
     "require": {
         "php": "^7.3 || ^8.0",
-        "illuminate/console": "^8.40",
-        "illuminate/filesystem": "^8.40",
-        "illuminate/support": "^8.40",
+        "illuminate/console": "^10.0",
+        "illuminate/filesystem": "^10.0",
+        "illuminate/support": "^10.0",
         "orchestra/model": "^6.0",
         "orchestra/support": "^6.1"
     },
