--- a/composer.json
+++ b/composer.json
@@ -45,11 +45,5 @@
     "config": {
         "sort-packages": true
     },
-    "minimum-stability": "dev",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/cortega99/model"
-        }
-    ]
+    "minimum-stability": "dev"
 }
