--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         ]
     },
     "require": {
-        "php": "^7.3 || ^8.0",
+        "php": "^8.1",
         "illuminate/console": "^10.0",
         "illuminate/filesystem": "^10.0",
         "illuminate/support": "^10.0",
